--- a/index.html
+++ b/index.html
@@ -270,41 +270,21 @@
 
     <!--Job section start-->
     <div class="container-fluid bg-secondary px-5 py-4 min-vh-50">
-        <h1 class="display-5 mt-2 mb-4">Apply for a Position</h1>
+        <h2 class="display-5 mt-2 mb-4">Apply for a Position</h2>
         <div class="row">
-            <div class="col-12">
-                <form id="jobForm">
-                    <div class="row">
-                        <div class="mb-3 col-md-6">
-                            <label class="form-label">Name</label>
-                            <input type="text" id="name" name="name" class="form-control" required>
-                        </div>
-                        <div class="mb-3 col-md-6">
-                            <label class="form-label">Phone</label>
-                            <input type="tel" id="phone" name="phone" class="form-control" required>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="mb-3 col-md-6">
-                            <label class="form-label">Email</label>
-                            <input type="email" id="email" name="email" class="form-control" required>
-                        </div>
-                        <div class="mb-3 col-md-6">
-                            <label class="form-label">Position Applying For</label>
-                            <select id="position" name="position" class="form-select">
-                                <option value="Healthcare Assistant">Healthcare Assistant</option>
-                                <option value="Domestic Assistant">Domestic Assistant</option>
-                                <option value="Kitchen Assistant">Kitchen Assistant</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary mt-3" onclick="sendToWhatsApp(event)">Submit</button>
-                    </div>
-                </form>
+            <div class="mb-3 col-md-12">
+                <label class="form-label">
+                    Looking for a fulfilling job where you can make a real impact? Join our team! We are currently hiring for Healthcare Assistance, Domestic Assistance, and Kitchen Assistance positions. Whether you’re passionate about providing care, helping with household tasks, or supporting kitchen operations, we have a role for you. Be part of a supportive and rewarding work environment where your efforts truly matter. Apply now and start your journey with us!
+                </label>
+            </div>
+            <div class="text-center">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhHkCUSc7rtobVDDZxevIlNVSjaMKCVoz_J87xrNQkf06eZA/viewform" target="_blank" class="btn btn-primary mt-3">
+                    Apply Now
+                </a>
             </div>
         </div>
     </div>
+    
     <!--Job section end-->
     
     <!-- Footer Start -->
@@ -316,7 +296,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                     <a class="text-secondary mb-2" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                    <a class="text-secondary" href="career.html"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+                    <a class="text-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSfhHkCUSc7rtobVDDZxevIlNVSjaMKCVoz_J87xrNQkf06eZA/viewform" target="_blank"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -324,7 +304,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                     <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="career.html"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+                    <a class="text-secondary mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSfhHkCUSc7rtobVDDZxevIlNVSjaMKCVoz_J87xrNQkf06eZA/viewform" target="_blank"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                     <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
