--- a/service.html
+++ b/service.html
@@ -114,7 +114,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
                     <a class="text-secondary mb-2" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                    <a class="text-secondary" href="career.html"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+                    <a class="text-secondary" href="https://docs.google.com/forms/d/e/1FAIpQLSfhHkCUSc7rtobVDDZxevIlNVSjaMKCVoz_J87xrNQkf06eZA/viewform" target="_blank"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -122,7 +122,7 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                     <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                    <a class="text-secondary mb-2" href="career.html"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+                    <a class="text-secondary mb-2" href="https://docs.google.com/forms/d/e/1FAIpQLSfhHkCUSc7rtobVDDZxevIlNVSjaMKCVoz_J87xrNQkf06eZA/viewform" target="_blank"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
                     <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
